# rules_rllvm

./: MODULE.bazel  README.md  WORKSPACE
examples/: .gitignore  MODULE.bazel  WORKSPACE
rllvm/: BUILD.rllvm.bazel
toolchain/: BUILD.llvm_repo.bazel  deps.bzl  extensions.bzl  repo.bzl  rllvm_cc_wrapper.sh.tpl  rllvm_config.yml.tpl  rules.bzl
