"h1994st/rules_rllvm"

module(name = "rules_rllvm", version = "0.0.1", bazel_compatibility = [">=3.7.0"])

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "toolchains_llvm", version = "1.2.0")
bazel_dep(name = "rules_rust", version = "0.55.6")

# rllvm
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "rllvm",
    build_file = "//rllvm:BUILD.rllvm.bazel",
    strip_prefix = "rllvm-0.1.2",
    type = "tar.gz",
    urls = ["https://static.crates.io/crates/rllvm/rllvm-0.1.2.crate"],
)

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")

crate.from_cargo(
    name = "rllvm_deps",
    cargo_lockfile = "@rllvm//:Cargo.lock",
    generate_binaries = True,
    manifests = ["@rllvm//:Cargo.toml"],
)
use_repo(crate, "rllvm_deps")
