"h1994st/rules_rllvm"

module(name = "rules_rllvm", version = "0.0.1", bazel_compatibility = [">=3.7.0"])

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "toolchains_llvm", version = "1.2.0")

# rllvm
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")
http_archive(
    name = "rllvm",
    build_file = "//rllvm:BUILD.rllvm.bazel",
    sha256 = "31dea623a2865f7b070880b7534747bba66103c089403d46f935a92f1ffa3b9e",
    strip_prefix = "rllvm-x86_64-unknown-linux-gnu",
    urls = ["https://github.com/h1994st/rllvm/releases/download/v0.1.3/rllvm-x86_64-unknown-linux-gnu.tar.xz"],
)
