"rules_rllvm examples"

module(name = "rules_rllvm_examples")

bazel_dep(name = "rules_rllvm")
local_path_override(
    module_name = "rules_rllvm",
    path = "..",
)

# rllvm = use_extension("@rules_rllvm//toolchain:extensions.bzl", "rllvm")

# use_repo(rllvm, "rllvm_toolchain")

# register_toolchains("@rllvm_toolchain//:all")

bazel_dep(name = "toolchains_llvm", version = "1.2.0")
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "19.1.0",
)

use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")
register_toolchains("@llvm_toolchain//:all")
